# Rocket-Lib

./: .gitignore  README.md  rocket_lib_documentation.md  rocket_lib_multithreading_article.md  run_comparison.sh  setup.py  test_keras_reg.py  tests.sh
core/: CMakeLists.txt
core/include/: activation.h  layer.h  loss.h  model.h  optimizer.h  tensor.h  threadpool.h
core/src/: activation.cpp  layer.cpp  loss.cpp  model.cpp  optimizer.cpp  rocket.cpp  tensor.cpp
samples/: binary_classification.py  comprehensive_model.py  resnet_dag.py  spam_benchmark.py  spam_classification.py  spam_classification_transformer.py
testing/: adam_test.py  compare_decoder_keras.py  compare_decoder_pytorch.py  compare_encoder_keras.py  compare_encoder_pytorch.py  compare_keras.py  compare_pytorch.py  compare_transformer_keras.py  compare_transformer_pytorch.py  debug_gradients.py  feature_test.py  keras3_reg.py  pytorch_reg.py  rocket_test.py  test_rnn_lstm.py  verify_batch_1.py  verify_correctness.py  verify_isolation.py  verify_parity.py
tests/: test_core_api.py  test_ff_parity.py  test_rnn_lstm_parity.py  test_transformer_parity.py
